# CoCG

./: CMakeLists.txt  README.md  README_zh.md
cocg_ast/: CMakeLists.txt
cocg_ast/include/cocg_ast/: action.h  durative_action.h  knowledge.h  node.h  param.h  plan.h  plan_item.h  tree.h
cocg_cff_plan_solver/: CMakeLists.txt
cocg_cff_plan_solver/include/cocg_cff_plan_solver/: cff_plan_solver.h
cocg_cff_plan_solver/src/: cff_plan_solver.cpp
cocg_cff_plan_solver/src/contingent-ff/: CMakeLists.txt  lex.fct_pddl.c  lex.ops_pddl.c  search.c
cocg_cff_plan_solver/src/contingent-ff/test/: domain.pddl  grid_domain.pddl  grid_p2.pddl  grid_p3.pddl  p3.pddl  p7.pddl
cocg_cff_plan_solver/test/: CMakeLists.txt
cocg_cff_plan_solver/test/pddl/: domain.pddl  problem_blocks.pddl  problem_blocks_impossible.pddl
cocg_cff_plan_solver/test/pddl/BoxPushing/B2/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/BoxPushing/B3/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/BoxPushing/B4/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/BoxPushing/B5/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/BoxPushing/B6/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/BoxPushing/B6/IMAP_solution/: Kd.pddl  Kp.pddl  d.pddl  p.pddl  plan_a1.txt  plan_a2.txt  plan_a3.txt  problem.sat
cocg_cff_plan_solver/test/pddl/BoxPushing/B7/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/ButtonPushing/B1/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/ButtonPushing/B2/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/ButtonPushing/B3/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/ConstAgentsBoxPushing/B3.3/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/ConstAgentsBoxPushing/B3.3/IMAP_solution/: d.pddl  p.pddl  plan_a1.txt  plan_a2.txt
cocg_cff_plan_solver/test/pddl/MRBlocks/: p_blocks_r1p2b1_2.pddl  p_blocks_r2p7b3.pddl  p_blocks_r3p4b3_6.pddl  p_blocks_r3p6b3_8.pddl  p_blocks_r3p7b3_12.pddl  p_blocks_r4p8b4_16.pddl
cocg_cff_plan_solver/test/pddl/RescueOperation/RO1/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R1/: d.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R10/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R11/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R14/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R15/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R16/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R17/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R18/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R19/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R2/: d.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R20/: p.pddl
cocg_cff_plan_solver/test/pddl/Rovers/R9/: p.pddl
cocg_cff_plan_solver/test/pddl/TableMoving/T2/: d.pddl  p.pddl
cocg_cff_plan_solver/test/pddl/coffee_serving/: d.pddl  p1.pddl  p10.pddl  p2.pddl  p3.pddl  p4.pddl  p5.pddl  p6.pddl  p7.pddl  p8.pddl  p9.pddl
cocg_cff_plan_solver/test/pddl/coffee_serving_2r/: d.pddl  p1.pddl  p10.pddl  p2.pddl  p3.pddl  p4.pddl  p5.pddl  p6.pddl  p7.pddl  p8.pddl  p9.pddl
cocg_cff_plan_solver/test/pddl/elogistics/: domain.pddl
cocg_cff_plan_solver/test/unit/: CMakeLists.txt  cff_test.cpp
cocg_core/: CMakeLists.txt
cocg_core/include/cocg_core/: cocg_core.h  cocg_domain_expert.h  cocg_domain_reader.h  cocg_graphplan.h  cocg_problem_expert.h  cocg_problem_expert_utils.h  cocg_subgraph.h  cocg_utils.h  cont_plan_node.h  cont_plan_solver_base.h  types.h  utils.h
cocg_core/src/: cocg_core.cpp  cocg_domain_expert.cpp  cocg_domain_reader.cpp  cocg_graphplan.cpp  cocg_problem_expert.cpp  cocg_problem_expert_utils.cpp  cocg_utils.cpp  utils.cpp
cocg_core/test/: CMakeLists.txt
cocg_core/test/pddl/: domain_1_ok.pddl  domain_2_error.pddl  domain_blocks_observe.pddl  domain_charging.pddl  domain_combined_processed.pddl  domain_simple_constants.pddl  domain_simple_constants_processed.pddl  domain_simple_ext.pddl  domain_simple_observe.pddl  domain_simple_pe.pddl  domain_simple_processed.pddl  factory.pddl  factory_processed.pddl  problem_0.pddl  problem_blocks_observe.pddl  problem_charging.pddl  problem_empty_domain.pddl  problem_simple_1_pe.pddl  problem_simple_constants_1.pddl  problem_simple_constants_2.pddl  problem_unexpected_syntax.pddl
cocg_core/test/pddl/cocg/: d_blocks.pddl  p_blocks_r1p2b1.pddl  p_blocks_r2p3b2.pddl
cocg_core/test/unit/: CMakeLists.txt  domain_expert_test.cpp  domain_reader_test.cpp  problem_expert_test.cpp  types_test.cpp  utils_test.cpp
cocg_pddl_parser/: CMakeLists.txt
cocg_pddl_parser/include/cocg_pddl_parser/: Action.h  And.h  Basic.h  CondIter.h  Condition.h  Derived.h  Domain.h  EitherType.h  Exists.h  Expression.h  Forall.h  Function.h  FunctionModifier.h  Ground.h  GroundFunc.h  Instance.h  Lifted.h  Not.h  Oneof.h  Or.h  ParamCond.h  Stringreader.h  Task.h  TemporalAction.h  TokenStruct.h  Type.h  TypeGround.h  Unknown.h  Utils.h  When.h
cocg_pddl_parser/src/: parser.cpp
cocg_pddl_parser/src/cocg_pddl_parser/: Action.cpp  And.cpp  Derived.cpp  Exists.cpp  Expression.cpp  Forall.cpp  Function.cpp  FunctionModifier.cpp  Ground.cpp  GroundFunc.cpp  Lifted.cpp  Not.cpp  Oneof.cpp  Or.cpp  ParamCond.cpp  TemporalAction.cpp  TypeGround.cpp  Unknown.cpp  Utils.cpp  When.cpp
cocg_pddl_parser/test/: CMakeLists.txt  pddl_parser_test.cpp
cocg_tests/test/: CMakeLists.txt  cff_cocg.cpp  cff_cocg.h  cff_cocg_main.cpp  cff_cocg_test.cpp  cocg_core_test.cpp  cocg_graphplan_test.cpp  cocg_main_test.cpp
